# TISCOPE

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tiscope/: __init__.py  function.py  layer.py  model.py  utils.py
