[build-system]
requires = ["setuptools>=61","setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tiscope"
version = "0.0.2"
authors = [
  { name="Yuzhe Li", email="liyuzhezju@gmail.com" },
  { name="Weixi Ning", email="aaronning98@gmail.com" }
]
description = "TISCOPE"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "scanpy",
    "matplotlib",
    "seaborn",
    "squidpy",
    "bbknn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/zhangqf-lab/TISCOPE"
"Bug Tracker" = "https://github.com/zhangqf-lab/TISCOPE/issues"
